--- a/app.json
+++ b/app.json
@@ -25,6 +25,12 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "expo": {
+      "androidStatusBar": {
+        "backgroundColor": "#C2185B",
+        "translucent": false
+      }
     }
   }
 }
